--- a/.github/workflows/chia.yml
+++ b/.github/workflows/chia.yml
@@ -11,4 +11,4 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@master
       - name: Run chia cli
-        uses: worldiety/chia
+        uses: worldiety/chia@master
