try to get chia config from pwd

--- a/.chia.example.yml
+++ b/.chia.example.yml
@@ -6,5 +6,5 @@ skippedProviders:
 projectRootAppendix: Null
 
 swiftLintConfig:
-     lintingRulesPath: https://PATH/TO/CONFIG/.swiftlint.yml
+     # lintingRulesPath: https://PATH/TO/CONFIG/.swiftlint.yml
      # lintingRulesPath: /LOCAL/PATH/TO/CONFIG/.swiftlint.yml
