--- a/.github/workflows/chia.yml
+++ b/.github/workflows/chia.yml
@@ -9,6 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
-        uses: actions/checkout@master
+        uses: actions/checkout@main
       - name: Run chia cli
-        uses: worldiety/chia@master
+        uses: worldiety/chia@main
